force-app/main/default/objects/Other_External_Service_List__c/Other_External_Service_List__c.object-meta.xml
<CustomObject>
    <label>Other External Service List</label>
    <nameField>
        <label>Name of Agency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other External Service Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>