force-app/main/default/objects/Other_External_Service_List__c/fields/Name_of_Professionals__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Professionals__c</fullName>
    <label>Name of Professionals</label>
    <length>100</length>
    <type>Text</type>
</CustomField>