force-app/main/default/objects/Other_External_Service_List__c/fields/services_Provide_to_Pupil__c.field-meta.xml
<CustomField>
    <fullName>services_Provide_to_Pupil__c</fullName>
    <label>Service Provide to Pipil</label>
    <length>100</length>
    <type>Text</type>
</CustomField>